# copilot-sdk-rust

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: agent_management.rs  attachments.rs  basic_chat.rs  blob_attachments.rs  byok.rs  commands.rs  compaction_events.rs  custom_agents.rs  deny_allow_tools.rs  elicitation.rs  escape_room.rs  external_server.rs  fluent_tools.rs  hooks.rs  list_models.rs  mcp_servers.rs  mode_switching.rs  multi_tools.rs  multi_turn.rs  permission_callback.rs  plan_ops.rs  reasoning_effort.rs  resume_with_tools.rs  rscopilot_cli.rs  set_model.rs  shell_exec.rs  streaming.rs  system_prompt.rs  telemetry.rs  tool_progress.rs  tool_usage.rs  user_input.rs  yolo.rs
src/: client.rs  error.rs  events.rs  lib.rs  process.rs  session.rs  tools.rs  types.rs
tests/: .gitignore  e2e_tests.rs  snapshot_conformance.rs
